# GPGPU-Edge-Detector

./: CMakeLists.txt  README.md  copy.cmake  vcpkg.json
cuda_include/: cuda_edge_detection.cuh
cuda_src/: cuda_edge_detection.cu
include/: basic_window.h  gpu_info.h  main_window.h
include/Canny/: canny_timings.h
include/Canny/cpu/: canny_edge_detector_cpu.h
include/Canny/cuda/: canny_edge_detector_cuda.h  cuda_canny_edge_detection.cuh
include/Dog/: dog_timings.h
include/Dog/cpu/: dog_edge_detector_cpu.h
include/Dog/cuda/: cuda_dog_edge_detection.cuh  dog_edge_detector_cuda.h
include/cuda/: cuda_edge_detection.cuh  detector_cuda.h  gpu_info.h
include/general/: detector_base.h  imgui_display.h  main_window.h
include/general/OpenGL_SDL/: SDL_GLDebugMessageCallback.h  basic_window.h  element_buffer_object.h  file_handling.h  generic_structs.h  shader_program.h  vertex_array_object.h  vertex_buffer_object.h
include/general/cpu/: gauss_blur_cpu.h
include/general/cuda/: gauss_blur.cuh  gpu_info.h
src/: SDL_GLDebugMessageCallback.cpp  basic_window.cpp  gpu_info.cpp  main.cpp  main_window.cpp
src/Canny/cpu/: canny_edge_detector_cpu.cpp
src/Canny/cuda/: canny_edge_detector_cuda.cpp  cuda_canny_edge_detection.cu
src/Dog/cpu/: dog_edge_detector_cpu.cpp
src/Dog/cuda/: cuda_dog_edge_detection.cu  dog_edge_detector_cuda.cpp
src/cuda/: cuda_edge_detection.cu  detector_cuda.cpp  gpu_info.cpp
src/general/: detector_base.cpp  imgui_display.cpp  main_window.cpp
src/general/OpenGL_SDL/: SDL_GLDebugMessageCallback.cpp  basic_window.cpp  element_buffer_object.cpp  file_handling.cpp  generic_structs.cpp  shader_program.cpp  vertex_array_object.cpp  vertex_buffer_object.cpp
src/general/cpu/: gauss_blur_cpu.cpp
src/general/cuda/: gauss_blur.cu  gpu_info.cpp
